# tauri-dim

./: 0fotopolka_0.0.1_amd64.deb  README.md  fotopolka_0.0.1_amd64.deb  meminfo-process_0.0.2_amd64.deb  package.json
meminfoproc-gtk3/: Cargo.toml  MemInfoProc-gtk_0.1.0_amd64-20.deb  MemInfoProc-gtk_0.1.0_amd64.deb  MeminfoProcess-gtk_0.1.1_amd64.deb  MeminfoProcess-gtk_0.1.1_amd64_for_mint20.3.deb
meminfoproc-gtk3/src/: main.css  main.rs
meminfoproc-gtk3/src/info/: mod.rs
meminfoproc-gtk3/src/liststore/: mod.rs
meminfoproc-gtk4/: Cargo.toml
meminfoproc-gtk4/src/: main.rs
meminfoproc-gtk4/src/info/: mod.rs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
