[package]
name = "meminfoprocess"
version = "0.0.2"
description = "MeminfoProcess - простой мониторинг системы с GUI. Упрощение работы с Linux"
authors = ["Polyakov Dimitri Vladimirovich <almaz-vil@list.ru>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
chrono="0.4.23"
walkdir="2.3.2"
page_size="0.5.0"
nix="0.26.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
